--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,11 +10,12 @@
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.inputsystem": "1.9.0",
     "com.unity.render-pipelines.universal": "17.0.3",
+    "com.unity.serialization": "3.1.1",
     "com.unity.test-framework": "1.4.5",
     "com.unity.timeline": "1.8.7",
     "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
-    "com.unity.serialization": "3.1.1",
+    "com.unityroom.client": "https://github.com/unityroom/unityroom-sdk.git?path=src/Unityroom.Client/Assets/Unityroom.Client",
     "org.nuget.r3": "1.2.4",
     "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
