--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.annulusgames.lit-motion": "https://github.com/AnnulusGames/LitMotion.git?path=src/LitMotion/Assets/LitMotion",
     "com.cysharp.r3": "1.2.4",
     "com.cysharp.unitask": "2.5.5",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.ai.navigation": "2.0.3",
     "com.unity.collab-proxy": "2.4.4",
     "com.unity.ide.rider": "3.0.31",
